--- a/test.html
+++ b/test.html
@@ -4,12 +4,10 @@
   <title>Game Swap</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+  <link property="stylesheet" rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
   <script src="../bootstrap/jquery/jquery.min.js"></script>
   <script src="../bootstrap/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="../bootstrap/css/style.css">
-  
+  <link  property="stylesheet" rel="stylesheet" href="../bootstrap/css/style.css">
 </head>
 <body style="height: auto;">
 
